--- a/package.json
+++ b/package.json
@@ -3,20 +3,22 @@
   "version": "1.0.0",
   "description": "A personal NFT Mint for an artist",
   "type": "module",
-  "homepage": "https://github.com/HeyDionna/MACT6340Project#readme",
-  "bugs": {
-    "url": "https://github.com/HeyDionna/MACT6340Project/issues"
+  "main": "app.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "npx nodemon app.js",
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/HeyDionna/MACT6340Project.git"
   },
-  "license": "MIT",
   "author": "Dionna C. Womack",
-  "main": "app.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/HeyDionna/MACT6340Project/issues"
   },
+  "homepage": "https://github.com/HeyDionna/MACT6340Project#readme",
   "devDependencies": {
     "nodemon": "^3.1.9",
     "typescript": "^5.7.3"
